Fixing alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3427,7 +3427,6 @@ input, select, textarea {
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
-	border-top: solid 2px #efefef;
 }
 
 .skill-category {
